--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,3 +31,21 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+  test:
+    
+    runs-on: ubuntu-latest
+
+   
+    steps:
+      
+      - uses: actions/checkout@v2
+
+     
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      
+         
+    
+    
