--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          ecoho Add other actions to build,
+          echo Add other actions to build,
           echo test, and deploy your project.
           
   test:
@@ -43,9 +43,19 @@ jobs:
 
      
       - name: Run a one-line script
-        run: echo Hello, world!
-
+        run: echo Hello....!
       
+      
+  deploy:
+    
+    runs-on: windows-latest
+
+      steps:
+      
+        -uses: actions/checkout@v2
+         
+        -name: Checking
+         run: echo How are u?
          
     
     
